--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -12,13 +12,13 @@
   
  
   <servlet>
-  <servlet-name>Servlet</servlet-name>
-  <servlet-class>Servlet</servlet-class>
+  <servlet-name>UpdateMenuServlet</servlet-name>
+  <servlet-class>Servlet/UpdateMenuServlet</servlet-class>
   </servlet>
   
   <servlet-mapping>
-  <servlet-name>Servlet</servlet-name>
-  <url-pattern>/Servlet</url-pattern>
+  <servlet-name>UpdateMenuServlet</servlet-name>
+  <url-pattern>/UpdateMenuServlet</url-pattern>
   </servlet-mapping>
  
 </web-app>
